--- a/config/options.ini
+++ b/config/options.ini
@@ -15,7 +15,7 @@
 
 [Credentials]
 ; Put your token here.  Not "secret".  The secret is not the token.
-Token = bot_token
+Token = Mjg3ODc0Mjk5NTg1MzYzOTY5.C7e6Cw.uXw4K9c-hUUT_DDOjnWGBCs_Xbs
 ; If you want to use a normal user account instead of a bot account, use these lines instead.
 ; Comment the token line and uncomment the Email/Password lines.
 ;Email = bot_discord@email
@@ -27,7 +27,7 @@ Token = bot_token
 ; If you can't do that for some reason, join the help server (invite in the readme) and type this in chat: !id
 ; If you still don't understand, watch this https://streamable.com/4w8e and may your respective deity have mercy on your soul.
 ; I don't want any more "how do I get the OwnerID" questions.
-OwnerID = 000000000000000000
+OwnerID = 110076057167618048
 
 [Chat]
 ; Change this if you don't want commands to trigger another bot
@@ -35,7 +35,7 @@ OwnerID = 000000000000000000
 ;	CommandPrefix = *
 ; This means the commands you use in chat are *play, *skip, etc.  This explanation exists because it seems no one knows what "prefix" means.
 ; You do not list commands here.  You do not put "CommandPrefix = *play *queue *np *skip *clear..." etc.  R e a d i n g   c o m p r e h e n s i o n.
-CommandPrefix = !
+CommandPrefix = ,
 
 ; Restrict the bot to only listen to certain text channels.  Uncomment (remove the ; at the start of the line) and add channel IDs to enable.
 ; An id looks like this number: 41771983423143930
@@ -55,7 +55,7 @@ CommandPrefix = !
 
 [MusicBot]
 ; The starting volume of the bot.  You can use any value from 0.01 to 1.0 but 0.15 is probably fine
-DefaultVolume = 0.15
+DefaultVolume = 1.0
 
 ; Only allow whitelisted users to use commands
 ; Deprecated in favor of permissions
@@ -64,15 +64,15 @@ WhiteListCheck = no
 ; Skips required to skip a song.  Whichever is lower will be used.
 ; Skip ratio refers to the percent of non-deafened, non-owner users
 ; in the voice channel needed to skip a song.
-SkipsRequired = 4
+SkipsRequired = 2
 SkipRatio = 0.5
 
 ; If no, delete videos after they've played, if the video
 ; isn't still in the queue, to avoid redownloading it.
-SaveVideos = yes
+SaveVideos = no
 
 ; Mentions the user who queued a song when the song plays.
-NowPlayingMentions = no
+NowPlayingMentions = yes
 
 ; On start up, if the owner is in a voice channel, join that channel.
 AutoSummon = yes
@@ -84,7 +84,7 @@ UseAutoPlaylist = yes
 AutoPause = yes
 
 ; Automatically delete messages the bot sends after some time.
-DeleteMessages = yes
+DeleteMessages = no
 
 ; Delete the invoking message when DeleteMessages is enabled.  Does nothing when DeleteMessages is disabled.
 ; Note the bot must have Manage Messages permission in the channel to delete other messages.
@@ -92,4 +92,4 @@ DeleteInvoking = no
 
 ; Prints extra output in the console and some errors to chat.
 ; This option is a work in progress, don't expect much.  You might as well just leave it on for now.
-DebugMode = no
+DebugMode = yes
