--- a/config/permissions.ini
+++ b/config/permissions.ini
@@ -67,11 +67,11 @@
 ; This is the fallback group for any users that don't get assigned to another group.  Don't remove/rename this group.
 [Default]
 CommandWhitelist = play perms queue np skip search id help clean
-; CommandBlacklist =
+CommandBlacklist = shutdown restart
 IgnoreNonVoice = play skip search
 ; GrantToRoles =
 ; UserList =
-MaxSongLength = 1200
+MaxSongLength = 0
 MaxSongs = 0
 AllowPlaylists = yes
 ; MaxPlaylistLength = 20
